refactor to a tagless component

--- a/app/templates/components/signature-pad.hbs
+++ b/app/templates/components/signature-pad.hbs
@@ -4,6 +4,9 @@
 
   ...attributes
 
+  {{did-insert (action this.registerCanvasElement)}}
+  {{did-insert (action this.draw)}}
+
   {{on "mousedown" (action this.penDown)}}
   {{on "touchstart" (action this.penDown)}}
 
